--- a/new.html
+++ b/new.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Traveling Blog</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/image/favicon-32x32.png">
 </head>
 <body>
     <h1>Hello Git</h1>
+    <a href="#">Home</a>
 </body>
 </html>
